@startuml
skinparam classAttributeIconSize 0

interface Promotion {
    + apply(products: List<Product>): List<Product>
}

class MoreThan200 implements Promotion {
    + apply(products: List<Product>): List<Product>
}
class MoreThan300 implements Promotion {
    + apply(products: List<Product>): List<Product>
}
class ThirtyPercentOffForOne implements Promotion {
    - productCode: String
    + apply(products: List<Product>): List<Product>
}
class TwoPlusOne implements Promotion {
    + apply(products: List<Product>): List<Product>
}

class Product {
    - code: String
    - name: String
    - price: double
    - discountPrice: double
    + getCode(): String
    + getName(): String
    + getPrice(): double
    + getDiscountPrice(): double
    + setDiscountPrice(discountPrice: double): void
    + resetDiscount(): void
}

class Cart {
    - products: List<Product>
    + addProduct(product: Product): void
    + getProducts(): List<Product>
    + getTopNProducts(comparator: Comparator<Product>, n: int): List<Product>
    + sortProducts(comparator: Comparator<Product>): void
    + applyPromotions(promotions: List<Promotion>): List<Product>
    + getTotalDiscountPrice(productList: List<Product>): double
}

class Comparators {
    + {static} BY_PRICE_DESC_NAME_ASC: Comparator<Product>
    + {static} BY_PRICE_ASC: Comparator<Product>
    + {static} BY_NAME_ASC: Comparator<Product>
}

Cart o--> Product : contains
Cart ..> Promotion : applies
@enduml